# kec-lisp

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  docs.yml
cli/: main.c
core/: 00-def.lsp  10-list.lsp  15-math.lsp  20-cmp.lsp  25-alist.lsp  26-plist.lsp  30-pred.lsp  35-error.lsp  36-recover.lsp  40-ctrl.lsp  45-quasiquote.lsp  50-hof.lsp  52-container.lsp  55-util.lsp  60-str.lsp  65-strtool.lsp  70-sort.lsp
docs/: boundary.md  builtins.md  bytecode-vm.md  core-library.md  extended-library.md  faq.md  fe-kernel.md  ffi-bridge.md  getting-started.md  index.mdx  knemacs.md  language-standard.md  language.md  memory-model.md
docs/adr/: ADR-0001-base-language-additions.md  ADR-0002-editor-repl-extended-library-tier.md  ADR-0003-container-types-vectors-hash-tables.md  ADR-0004-application-engine-substrate.md  ADR-0005-pure-math-and-monotonic-time-primitives.md  ADR-0006-host-input-and-idle-timer-seam.md
docs/notes/: field-notes-amop.md  field-notes-emacs.md  field-notes-rxi-lite.md  field-notes-writing-gnu-emacs-extensions.md
docs/plans/: 2026-06-15-black-ice-trace-design.md  2026-06-22-language-hardening-design.md
editor/: 10-zipper.lsp  20-undo.lsp  30-buffer.lsp  32-text.lsp  40-view.lsp  50-keymap.lsp  52-mode.lsp  55-bindings.lsp  55-emacs.lsp  60-persist.lsp  70-lifecycle.lsp  72-timer.lsp  80-ranker.lsp  85-minibuffer.lsp  90-repl.lsp  92-prompt.lsp  95-host.lsp  96-tty.lsp
editors/emacs/: README.md  kec-lisp-mode-tests.el  kec-lisp-mode.el
examples/: black-ice-trace-lib.lsp  black-ice-trace.lsp  csv-roundtrip.lsp  fib.lsp  fizzbuzz.lsp  greet.lsp  hello.lsp  life.lsp
experiments/emacs-animation/: 01-line-down.lsp  02-sine-wave.lsp  03-drunkard.lsp  04-bounce.lsp  05-marquee.lsp  06-fireplace.lsp  07-walker.lsp  README.md  anim.lsp
host/: containers.c  host.c  host.h
kernel/: fe.c  fe.h
runtime/: kec.c  kec.h
tests/: harness.lsp
tests/c/: embed_portability.c  test_arena.c  test_error_leaks.c  test_gc_roots.c  test_host_state.c
tests/cli/: build-reader.sh  echo-keys.lsp  edit-smoke.sh  idle-timer-smoke.sh  load-path.sh  nemacs-binary.sh  nemacs-smoke.sh  readkey-smoke.sh  repl-overflow.sh  repl-smoke.sh  test-exit.sh
tests/core/: alist.lsp  applyread.lsp  bigstr.lsp  bitwise.lsp  blob.lsp  cmp.lsp  container-gc.lsp  ctrl.lsp  def.lsp  error.lsp  eval.lsp  fileio.lsp  fsenv.lsp  hash.lsp  hof.lsp  introspect.lsp  list.lsp  macro-robustness.lsp  macroexpand.lsp  math.lsp  matrix.lsp  pathlen.lsp  plist.lsp  pred.lsp  quasiquote.lsp  recover.lsp  require.lsp  rng.lsp  sort.lsp  spit.lsp  str.lsp  strtool.lsp  time.lsp  trymsg.lsp  util.lsp  validate.lsp  vector.lsp
tests/editor/: bindings.lsp  buffer.lsp  emacs.lsp  host.lsp  keymap.lsp  lifecycle.lsp  minibuffer.lsp  mode.lsp  persist.lsp  prompt.lsp  ranker.lsp  repl.lsp  text.lsp  timer.lsp  tty.lsp  undo.lsp  view.lsp  zipper.lsp
tests/examples/: black-ice-trace.lsp
tests/kernel/: kernel.lsp
tools/: mkembed.c
website/: astro.config.mjs  package-lock.json  package.json
website/src/styles/: kec.css
